--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lucide-react": "^0.562.0",
     "mongoose": "^9.0.2",
     "next": "16.1.1",
     "openai": "^6.15.0",
